--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@ coverage/
 # Build output
 dist/
 build/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
