--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "medical-portal-backend",
+  "name": "aiims-medical-portal-backend",
   "version": "1.0.0",
-  "description": "Backend for AIIMS medical portal",
+  "description": "Backend for AIIMS Medical Portal",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build step needed for Node.js'"
+    "build": "echo 'No build step needed for Node.js'",
+    "render-build": "npm install"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,8 +21,5 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
