--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "aiims-medical-portal-backend",
+  "name": "aiims-portal",
   "version": "1.0.0",
-  "description": "Backend for AIIMS Medical Portal",
-  "main": "server.js",
+  "description": "AIIMS Portal with appointment booking system",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step needed for Node.js'",
-    "render-build": "npm install"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "express-rate-limit": "^6.10.0"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
